# demo

./: .gitignore  README.md  pyproject.toml
lesson1_src/: README.md  pyproject.toml  requirements.txt
lesson1_src/core/: settings.py  urls.py
lesson1_src/weekdays/: urls.py  views.py
sem1_src/: run.py
sem2_src/: run.py
sem3_src/: run.py
sem6_src/: run.py
sem7_src/: run.py
task1_src/: .env.example  pyproject.toml  requirements.txt
task1_src/blog/: forms.py  indexes.py  urls.py  utils.py  views.py
task1_src/blog/migrations/: 0001_initial.py  0002_post_body.py  0003_alter_post_category.py  0004_feedback.py
task1_src/blog/models/: __init__.py  feedback.py  post.py
task1_src/blog/templatetags/: custom_tags.py
task1_src/core/: settings.py  urls.py
task1_src/static/: base.css
task1_src/templates/: 404.html  about.html  base.html  category.html  feedback.html  post.html  post_detail.html  post_preview.html  root.html  sidebar.html  technology.html  year.html
