[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["serje ù <example@domain.ltd>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
black = "^24.1.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
